{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 450,
  "lineage": "3e70b48e-a925-de1d-e88d-972172e8f4e1",
  "resources": [
    {
      "module": "module.load-nat[0]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-04-02T11:59:19.414-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sme-poc-edp-lod/regions/us-central1/routers/sme-poc-edp-default-nat",
            "name": "sme-poc-edp-default-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default",
            "project": "sme-poc-edp-lod",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/regions/us-central1/routers/sme-poc-edp-default-nat"
          },
          "dependencies": [
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking",
            "module.load-vpc.data.google_compute_network.network",
            "module.load-vpc.google_compute_global_address.psa_ranges",
            "module.load-vpc.google_compute_network.network",
            "module.load-vpc.google_compute_network_peering.local",
            "module.load-vpc.google_compute_network_peering.remote",
            "module.load-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.load-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.load-nat[0]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "sme-poc-edp-lod/us-central1/sme-poc-edp-default-nat/sme-poc-edp-default",
            "log_config": [
              {
                "enable": false,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "sme-poc-edp-default",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sme-poc-edp-lod",
            "region": "us-central1",
            "router": "sme-poc-edp-default-nat",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.load-nat.google_compute_router.router",
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking",
            "module.load-vpc.data.google_compute_network.network",
            "module.load-vpc.google_compute_global_address.psa_ranges",
            "module.load-vpc.google_compute_network.network",
            "module.load-vpc.google_compute_network_peering.local",
            "module.load-vpc.google_compute_network_peering.remote",
            "module.load-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.load-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.load-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-04-02T10:47:38.820-07:00",
            "deny": [],
            "description": "Access from the admin subnet to all subnets.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-admins",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-admins",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-lod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-admins",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking",
            "module.load-vpc.data.google_compute_network.network",
            "module.load-vpc.google_compute_global_address.psa_ranges",
            "module.load-vpc.google_compute_network.network",
            "module.load-vpc.google_compute_network_peering.local",
            "module.load-vpc.google_compute_network_peering.remote",
            "module.load-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.load-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.load-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T10:47:38.939-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-tag-http",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-lod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-tag-http",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking",
            "module.load-vpc.data.google_compute_network.network",
            "module.load-vpc.google_compute_global_address.psa_ranges",
            "module.load-vpc.google_compute_network.network",
            "module.load-vpc.google_compute_network_peering.local",
            "module.load-vpc.google_compute_network_peering.remote",
            "module.load-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.load-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.load-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T10:47:38.792-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-tag-https",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-lod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-tag-https",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking",
            "module.load-vpc.data.google_compute_network.network",
            "module.load-vpc.google_compute_global_address.psa_ranges",
            "module.load-vpc.google_compute_network.network",
            "module.load-vpc.google_compute_network_peering.local",
            "module.load-vpc.google_compute_network_peering.remote",
            "module.load-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.load-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.load-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T10:47:38.784-07:00",
            "deny": [],
            "description": "Allow SSH to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-tag-ssh",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-lod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/firewalls/sme-poc-edp-default-ingress-tag-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking",
            "module.load-vpc.data.google_compute_network.network",
            "module.load-vpc.google_compute_global_address.psa_ranges",
            "module.load-vpc.google_compute_network.network",
            "module.load-vpc.google_compute_network_peering.local",
            "module.load-vpc.google_compute_network_peering.remote",
            "module.load-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.load-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.load-vpc[0]",
      "mode": "data",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.load-vpc[0]",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "psa_ranges",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.load-vpc[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default",
            "mtu": 0,
            "name": "sme-poc-edp-default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7836812384686701120",
            "project": "sme-poc-edp-lod",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default"
          },
          "dependencies": [
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking"
          ]
        }
      ]
    },
    {
      "module": "module.load-vpc[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/default",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-02T11:58:02.497-07:00",
            "description": "Terraform-managed.",
            "gateway_address": "10.10.0.1",
            "id": "projects/sme-poc-edp-lod/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/global/networks/sme-poc-edp-default",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sme-poc-edp-lod",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-lod/regions/us-central1/subnetworks/default",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.load-project.data.google_bigquery_default_service_account.bq_sa",
            "module.load-project.data.google_project.project",
            "module.load-project.data.google_storage_project_service_account.gcs_sa",
            "module.load-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.load-project.google_compute_shared_vpc_service_project.service_projects",
            "module.load-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.load-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.load-project.google_org_policy_policy.default",
            "module.load-project.google_project.project",
            "module.load-project.google_project_iam_member.servicenetworking",
            "module.load-project.google_project_iam_member.shared_vpc_host_robots",
            "module.load-project.google_project_service.project_services",
            "module.load-project.google_project_service_identity.jit_si",
            "module.load-project.google_project_service_identity.servicenetworking",
            "module.load-vpc.data.google_compute_network.network",
            "module.load-vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.orch-nat[0]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-04-02T11:59:40.724-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sme-poc-edp-orc/regions/us-central1/routers/sme-poc-edp-default-nat",
            "name": "sme-poc-edp-default-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default",
            "project": "sme-poc-edp-orc",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/regions/us-central1/routers/sme-poc-edp-default-nat"
          },
          "dependencies": [
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking",
            "module.orch-vpc.data.google_compute_network.network",
            "module.orch-vpc.google_compute_global_address.psa_ranges",
            "module.orch-vpc.google_compute_network.network",
            "module.orch-vpc.google_compute_network_peering.local",
            "module.orch-vpc.google_compute_network_peering.remote",
            "module.orch-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.orch-nat[0]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "sme-poc-edp-orc/us-central1/sme-poc-edp-default-nat/sme-poc-edp-default",
            "log_config": [
              {
                "enable": false,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "sme-poc-edp-default",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sme-poc-edp-orc",
            "region": "us-central1",
            "router": "sme-poc-edp-default-nat",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.orch-nat.google_compute_router.router",
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking",
            "module.orch-vpc.data.google_compute_network.network",
            "module.orch-vpc.google_compute_global_address.psa_ranges",
            "module.orch-vpc.google_compute_network.network",
            "module.orch-vpc.google_compute_network_peering.local",
            "module.orch-vpc.google_compute_network_peering.remote",
            "module.orch-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.orch-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-04-02T11:47:48.225-07:00",
            "deny": [],
            "description": "Access from the admin subnet to all subnets.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-admins",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-admins",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-orc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-admins",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking",
            "module.orch-vpc.data.google_compute_network.network",
            "module.orch-vpc.google_compute_global_address.psa_ranges",
            "module.orch-vpc.google_compute_network.network",
            "module.orch-vpc.google_compute_network_peering.local",
            "module.orch-vpc.google_compute_network_peering.remote",
            "module.orch-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.orch-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T11:47:48.429-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-tag-http",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-orc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-tag-http",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking",
            "module.orch-vpc.data.google_compute_network.network",
            "module.orch-vpc.google_compute_global_address.psa_ranges",
            "module.orch-vpc.google_compute_network.network",
            "module.orch-vpc.google_compute_network_peering.local",
            "module.orch-vpc.google_compute_network_peering.remote",
            "module.orch-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.orch-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T11:47:48.446-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-tag-https",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-orc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-tag-https",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking",
            "module.orch-vpc.data.google_compute_network.network",
            "module.orch-vpc.google_compute_global_address.psa_ranges",
            "module.orch-vpc.google_compute_network.network",
            "module.orch-vpc.google_compute_network_peering.local",
            "module.orch-vpc.google_compute_network_peering.remote",
            "module.orch-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.orch-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T11:47:48.307-07:00",
            "deny": [],
            "description": "Allow SSH to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-tag-ssh",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-orc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/firewalls/sme-poc-edp-default-ingress-tag-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking",
            "module.orch-vpc.data.google_compute_network.network",
            "module.orch-vpc.google_compute_global_address.psa_ranges",
            "module.orch-vpc.google_compute_network.network",
            "module.orch-vpc.google_compute_network_peering.local",
            "module.orch-vpc.google_compute_network_peering.remote",
            "module.orch-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.orch-vpc[0]",
      "mode": "data",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.orch-vpc[0]",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "psa_ranges",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.orch-vpc[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default",
            "mtu": 0,
            "name": "sme-poc-edp-default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2640259349345332341",
            "project": "sme-poc-edp-orc",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default"
          },
          "dependencies": [
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking"
          ]
        }
      ]
    },
    {
      "module": "module.orch-vpc[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/default",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-02T11:58:58.011-07:00",
            "description": "Terraform-managed.",
            "gateway_address": "10.10.0.1",
            "id": "projects/sme-poc-edp-orc/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/global/networks/sme-poc-edp-default",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sme-poc-edp-orc",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.10.8.0/22",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.10.12.0/24",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-orc/regions/us-central1/subnetworks/default",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.orch-project.data.google_bigquery_default_service_account.bq_sa",
            "module.orch-project.data.google_project.project",
            "module.orch-project.data.google_storage_project_service_account.gcs_sa",
            "module.orch-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.orch-project.google_compute_shared_vpc_service_project.service_projects",
            "module.orch-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.orch-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.orch-project.google_org_policy_policy.default",
            "module.orch-project.google_project.project",
            "module.orch-project.google_project_iam_member.servicenetworking",
            "module.orch-project.google_project_iam_member.shared_vpc_host_robots",
            "module.orch-project.google_project_service.project_services",
            "module.orch-project.google_project_service_identity.jit_si",
            "module.orch-project.google_project_service_identity.servicenetworking",
            "module.orch-vpc.data.google_compute_network.network",
            "module.orch-vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.transf-nat[0]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-04-02T12:00:02.035-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sme-poc-edp-trf/regions/us-central1/routers/sme-poc-edp-default-nat",
            "name": "sme-poc-edp-default-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default",
            "project": "sme-poc-edp-trf",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/regions/us-central1/routers/sme-poc-edp-default-nat"
          },
          "dependencies": [
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking",
            "module.transf-vpc.data.google_compute_network.network",
            "module.transf-vpc.google_compute_global_address.psa_ranges",
            "module.transf-vpc.google_compute_network.network",
            "module.transf-vpc.google_compute_network_peering.local",
            "module.transf-vpc.google_compute_network_peering.remote",
            "module.transf-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.transf-nat[0]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "sme-poc-edp-trf/us-central1/sme-poc-edp-default-nat/sme-poc-edp-default",
            "log_config": [
              {
                "enable": false,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "sme-poc-edp-default",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sme-poc-edp-trf",
            "region": "us-central1",
            "router": "sme-poc-edp-default-nat",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.transf-nat.google_compute_router.router",
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking",
            "module.transf-vpc.data.google_compute_network.network",
            "module.transf-vpc.google_compute_global_address.psa_ranges",
            "module.transf-vpc.google_compute_network.network",
            "module.transf-vpc.google_compute_network_peering.local",
            "module.transf-vpc.google_compute_network_peering.remote",
            "module.transf-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.transf-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-04-02T10:55:54.622-07:00",
            "deny": [],
            "description": "Access from the admin subnet to all subnets.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-admins",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-admins",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-trf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-admins",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking",
            "module.transf-vpc.data.google_compute_network.network",
            "module.transf-vpc.google_compute_global_address.psa_ranges",
            "module.transf-vpc.google_compute_network.network",
            "module.transf-vpc.google_compute_network_peering.local",
            "module.transf-vpc.google_compute_network_peering.remote",
            "module.transf-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.transf-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T10:55:54.535-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-tag-http",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-trf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-tag-http",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking",
            "module.transf-vpc.data.google_compute_network.network",
            "module.transf-vpc.google_compute_global_address.psa_ranges",
            "module.transf-vpc.google_compute_network.network",
            "module.transf-vpc.google_compute_network_peering.local",
            "module.transf-vpc.google_compute_network_peering.remote",
            "module.transf-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.transf-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T10:55:54.564-07:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-tag-https",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-trf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-tag-https",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking",
            "module.transf-vpc.data.google_compute_network.network",
            "module.transf-vpc.google_compute_global_address.psa_ranges",
            "module.transf-vpc.google_compute_network.network",
            "module.transf-vpc.google_compute_network_peering.local",
            "module.transf-vpc.google_compute_network_peering.remote",
            "module.transf-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.transf-vpc-firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-02T10:55:54.629-07:00",
            "deny": [],
            "description": "Allow SSH to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-tag-ssh",
            "log_config": [],
            "name": "sme-poc-edp-default-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default",
            "priority": 1000,
            "project": "sme-poc-edp-trf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/firewalls/sme-poc-edp-default-ingress-tag-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking",
            "module.transf-vpc.data.google_compute_network.network",
            "module.transf-vpc.google_compute_global_address.psa_ranges",
            "module.transf-vpc.google_compute_network.network",
            "module.transf-vpc.google_compute_network_peering.local",
            "module.transf-vpc.google_compute_network_peering.remote",
            "module.transf-vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.transf-vpc[0]",
      "mode": "data",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.transf-vpc[0]",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "psa_ranges",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.transf-vpc[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default",
            "mtu": 0,
            "name": "sme-poc-edp-default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "501482265774258298",
            "project": "sme-poc-edp-trf",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default"
          },
          "dependencies": [
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking"
          ]
        }
      ]
    },
    {
      "module": "module.transf-vpc[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/default",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-02T11:59:19.058-07:00",
            "description": "Terraform-managed.",
            "gateway_address": "10.10.0.1",
            "id": "projects/sme-poc-edp-trf/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/global/networks/sme-poc-edp-default",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sme-poc-edp-trf",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sme-poc-edp-trf/regions/us-central1/subnetworks/default",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.transf-project.data.google_bigquery_default_service_account.bq_sa",
            "module.transf-project.data.google_project.project",
            "module.transf-project.data.google_storage_project_service_account.gcs_sa",
            "module.transf-project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.transf-project.google_compute_shared_vpc_service_project.service_projects",
            "module.transf-project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.transf-project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.transf-project.google_org_policy_policy.default",
            "module.transf-project.google_project.project",
            "module.transf-project.google_project_iam_member.servicenetworking",
            "module.transf-project.google_project_iam_member.shared_vpc_host_robots",
            "module.transf-project.google_project_service.project_services",
            "module.transf-project.google_project_service_identity.jit_si",
            "module.transf-project.google_project_service_identity.servicenetworking",
            "module.transf-vpc.data.google_compute_network.network",
            "module.transf-vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}